--- a/Public/index.html
+++ b/Public/index.html
@@ -14,7 +14,65 @@
         }
     </script>
 </head>
-<body class="font-RobotoBold">
-    <h1>123456</h1>
+<body class="font-RobotoBold text-xl bg-lightBlue-100 dark:bg-darkBlue-150 flex items-center justify-center w-full h-screen relative">
+        <div class="flex flex-col bg-lightBlue-150 dark:bg-darkBlue-200 p-6 rounded-3xl">
+            <div></div>
+            <div class="grid gap-4 grid-cols-4 grid-rows-5">
+                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                        <span class="text-lightBlue-350 dark:text-darkBlue-400">AC</span>
+                    </div>
+                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                        <span class="text-lightBlue-350 dark:text-darkBlue-400"></span>
+                    </div>
+                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                        <span class="text-lightBlue-350 dark:text-darkBlue-400">/</span>
+                    </div>
+                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                        <span class="text-lightBlue-350 dark:text-darkBlue-400">*</span>
+                    </div>
+                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                        <span class="text-lightBlue-200 dark:text-darkBlue-250">7</span>
+                    </div>
+                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                        <span class="text-lightBlue-200 dark:text-darkBlue-250">8</span>
+                    </div>
+                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                        <span class="text-lightBlue-200 dark:text-darkBlue-250">9</span>
+                    </div>
+                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                        <span class="text-lightBlue-350 dark:text-darkBlue-400">-</span>
+                    </div>
+                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                        <span class="text-lightBlue-200 dark:text-darkBlue-250">4</span>
+                    </div>
+                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                        <span class="text-lightBlue-200 dark:text-darkBlue-250">5</span>
+                    </div>
+                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                        <span class="text-lightBlue-200 dark:text-darkBlue-250">6</span>
+                    </div>
+                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                        <span class="text-lightBlue-350 dark:text-darkBlue-400">+</span>
+                    </div>
+                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                        <span class="text-lightBlue-200 dark:text-darkBlue-250">1</span>
+                    </div>
+                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                        <span class="text-lightBlue-200 dark:text-darkBlue-250">2</span>
+                    </div>
+                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                        <span class="text-lightBlue-200 dark:text-darkBlue-250">3</span>
+                    </div>
+                    <div class="flex items-center justify-center col-span-2 w-full h-full bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                        <span class="text-lightBlue-200 dark:text-darkBlue-250">0</span>
+                    </div>
+                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                        <span class="text-lightBlue-200 dark:text-darkBlue-250">.</span>
+                    </div>
+                    <div class="flex items-center justify-center col-start-4 row-start-4 row-span-2 w-12 bg-lightBlue-400 dark:bg-darkBlue-450 rounded-xl">
+                        <span class="text-lightBlue-450 dark:text-darkBlue-500">=</span>
+                    </div>
+                </div>
+        </div>
 </body>
 </html>
