--- a/Public/index.html
+++ b/Public/index.html
@@ -15,64 +15,94 @@
     </script>
 </head>
 <body class="font-RobotoBold text-xl bg-lightBlue-100 dark:bg-darkBlue-150 flex items-center justify-center w-full h-screen relative">
-        <div class="flex flex-col bg-lightBlue-150 dark:bg-darkBlue-200 p-6 rounded-3xl">
-            <div></div>
-            <div class="grid gap-4 grid-cols-4 grid-rows-5">
-                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
-                        <span class="text-lightBlue-350 dark:text-darkBlue-400">AC</span>
-                    </div>
-                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
-                        <span class="text-lightBlue-350 dark:text-darkBlue-400"></span>
-                    </div>
-                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
-                        <span class="text-lightBlue-350 dark:text-darkBlue-400">/</span>
-                    </div>
-                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
-                        <span class="text-lightBlue-350 dark:text-darkBlue-400">*</span>
-                    </div>
-                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
-                        <span class="text-lightBlue-200 dark:text-darkBlue-250">7</span>
-                    </div>
-                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
-                        <span class="text-lightBlue-200 dark:text-darkBlue-250">8</span>
-                    </div>
-                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
-                        <span class="text-lightBlue-200 dark:text-darkBlue-250">9</span>
-                    </div>
-                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
-                        <span class="text-lightBlue-350 dark:text-darkBlue-400">-</span>
-                    </div>
-                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
-                        <span class="text-lightBlue-200 dark:text-darkBlue-250">4</span>
-                    </div>
-                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
-                        <span class="text-lightBlue-200 dark:text-darkBlue-250">5</span>
-                    </div>
-                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
-                        <span class="text-lightBlue-200 dark:text-darkBlue-250">6</span>
-                    </div>
-                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
-                        <span class="text-lightBlue-350 dark:text-darkBlue-400">+</span>
-                    </div>
-                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
-                        <span class="text-lightBlue-200 dark:text-darkBlue-250">1</span>
-                    </div>
-                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
-                        <span class="text-lightBlue-200 dark:text-darkBlue-250">2</span>
-                    </div>
-                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
-                        <span class="text-lightBlue-200 dark:text-darkBlue-250">3</span>
-                    </div>
-                    <div class="flex items-center justify-center col-span-2 w-full h-full bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
-                        <span class="text-lightBlue-200 dark:text-darkBlue-250">0</span>
-                    </div>
-                    <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
-                        <span class="text-lightBlue-200 dark:text-darkBlue-250">.</span>
-                    </div>
-                    <div class="flex items-center justify-center col-start-4 row-start-4 row-span-2 w-12 bg-lightBlue-400 dark:bg-darkBlue-450 rounded-xl">
-                        <span class="text-lightBlue-450 dark:text-darkBlue-500">=</span>
-                    </div>
-                </div>
+       <svg class="hidden">
+           <symbol id="backspace" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="size-4">
+               <path fill-rule="evenodd" d="M6.414 3c-.464 0-.909.184-1.237.513L1.22 7.47a.75.75 0 0 0 0 1.06l3.957 3.957A1.75 1.75 0 0 0 6.414 13h5.836A2.75 2.75 0 0 0 15 10.25v-4.5A2.75 2.75 0 0 0 12.25 3H6.414ZM8.28 5.72a.75.75 0 0 0-1.06 1.06L8.44 8 7.22 9.22a.75.75 0 1 0 1.06 1.06L9.5 9.06l1.22 1.22a.75.75 0 1 0 1.06-1.06L10.56 8l1.22-1.22a.75.75 0 0 0-1.06-1.06L9.5 6.94 8.28 5.72Z" clip-rule="evenodd" />
+           </symbol>
+           <symbol id="sun" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="size-4">
+               <path d="M8 1a.75.75 0 0 1 .75.75v1.5a.75.75 0 0 1-1.5 0v-1.5A.75.75 0 0 1 8 1ZM10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0ZM12.95 4.11a.75.75 0 1 0-1.06-1.06l-1.062 1.06a.75.75 0 0 0 1.061 1.062l1.06-1.061ZM15 8a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5A.75.75 0 0 1 15 8ZM11.89 12.95a.75.75 0 0 0 1.06-1.06l-1.06-1.062a.75.75 0 0 0-1.062 1.061l1.061 1.06ZM8 12a.75.75 0 0 1 .75.75v1.5a.75.75 0 0 1-1.5 0v-1.5A.75.75 0 0 1 8 12ZM5.172 11.89a.75.75 0 0 0-1.061-1.062L3.05 11.89a.75.75 0 1 0 1.06 1.06l1.06-1.06ZM4 8a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5A.75.75 0 0 1 4 8ZM4.11 5.172A.75.75 0 0 0 5.173 4.11L4.11 3.05a.75.75 0 1 0-1.06 1.06l1.06 1.06Z" />
+           </symbol>
+           <symbol id="moon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="size-4">
+               <path d="M14.438 10.148c.19-.425-.321-.787-.748-.601A5.5 5.5 0 0 1 6.453 2.31c.186-.427-.176-.938-.6-.748a6.501 6.501 0 1 0 8.585 8.586Z" />
+           </symbol>
+       </svg>
+        <div class="flex flex-col bg-lightBlue-150 dark:bg-darkBlue-200 p-7 rounded-3xl">
+            <div class="h-32"></div>
+           <div>
+               <div class="flex items-center gap-x-4 mb-4">
+                   <div class="flex items-center justify-center w-12 h-6 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                        <svg class="w-4 h-4 text-lightBlue-200 dark:text-darkBlue-250">
+                            <use href="#sun"></use>
+                        </svg>
+                       <svg class="w-4 h-4 text-lightBlue-200 dark:text-darkBlue-250">
+                           <use href="#moon"></use>
+                       </svg>
+                   </div>
+                   <div class="flex items-center justify-center w-12 h-6 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl"></div>
+                   <div class="flex items-center justify-center w-12 h-6 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl"></div>
+                   <div class="flex items-center justify-center w-12 h-6 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl"></div>
+               </div>
+               <div class="grid gap-4 grid-cols-4 grid-rows-5">
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                       <span class="text-lightBlue-350 dark:text-darkBlue-400">AC</span>
+                   </div>
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                       <span class="text-lightBlue-350 dark:text-darkBlue-400">
+                           <svg class="w-6 h-6">
+                               <use href="#backspace"></use>
+                           </svg>
+                       </span>
+                   </div>
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                       <span class="text-lightBlue-350 dark:text-darkBlue-400">/</span>
+                   </div>
+                   <div class="flex items-center justify-center w-12 h-12  bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                       <span class="text-lightBlue-350 dark:text-darkBlue-400 h-6">*</span>
+                   </div>
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                       <span class="text-lightBlue-200 dark:text-darkBlue-250">7</span>
+                   </div>
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                       <span class="text-lightBlue-200 dark:text-darkBlue-250">8</span>
+                   </div>
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                       <span class="text-lightBlue-200 dark:text-darkBlue-250">9</span>
+                   </div>
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                       <span class="text-lightBlue-350 dark:text-darkBlue-400">-</span>
+                   </div>
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                       <span class="text-lightBlue-200 dark:text-darkBlue-250">4</span>
+                   </div>
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                       <span class="text-lightBlue-200 dark:text-darkBlue-250">5</span>
+                   </div>
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                       <span class="text-lightBlue-200 dark:text-darkBlue-250">6</span>
+                   </div>
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                       <span class="text-lightBlue-350 dark:text-darkBlue-400">+</span>
+                   </div>
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                       <span class="text-lightBlue-200 dark:text-darkBlue-250">1</span>
+                   </div>
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                       <span class="text-lightBlue-200 dark:text-darkBlue-250">2</span>
+                   </div>
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                       <span class="text-lightBlue-200 dark:text-darkBlue-250">3</span>
+                   </div>
+                   <div class="flex items-center justify-center col-span-2 w-full h-full bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                       <span class="text-lightBlue-200 dark:text-darkBlue-250">0</span>
+                   </div>
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                       <span class="text-lightBlue-200 dark:text-darkBlue-250 h-10">.</span>
+                   </div>
+                   <div class="flex items-center justify-center col-start-4 row-start-4 row-span-2 w-12 bg-lightBlue-400 dark:bg-darkBlue-450 rounded-xl">
+                       <span class="text-lightBlue-450 dark:text-darkBlue-500">=</span>
+                   </div>
+               </div>
+           </div>
         </div>
 </body>
 </html>
