add script code for toggle theme

--- a/Public/index.html
+++ b/Public/index.html
@@ -30,11 +30,11 @@
             <div class="h-32"></div>
            <div>
                <div class="flex items-center gap-x-4 mb-4">
-                   <div class="flex items-center justify-center w-12 h-6 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
-                        <svg class="w-4 h-4 text-lightBlue-200 dark:text-darkBlue-250">
+                   <div class="toggleTheme flex items-center justify-center w-12 h-6 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl cursor-pointer">
+                        <svg class="hidden dark:block w-4 h-4 text-lightBlue-200 dark:text-darkBlue-250">
                             <use href="#sun"></use>
                         </svg>
-                       <svg class="w-4 h-4 text-lightBlue-200 dark:text-darkBlue-250">
+                       <svg class="block dark:hidden w-4 h-4 text-lightBlue-200 dark:text-darkBlue-250">
                            <use href="#moon"></use>
                        </svg>
                    </div>
@@ -104,5 +104,6 @@
                </div>
            </div>
         </div>
+      <script src="../Public/script/app.js"></script>
 </body>
 </html>
