--- a/Public/index.html
+++ b/Public/index.html
@@ -26,11 +26,11 @@
                <path d="M14.438 10.148c.19-.425-.321-.787-.748-.601A5.5 5.5 0 0 1 6.453 2.31c.186-.427-.176-.938-.6-.748a6.501 6.501 0 1 0 8.585 8.586Z" />
            </symbol>
        </svg>
-        <div class="flex flex-col bg-lightBlue-150 dark:bg-darkBlue-200 p-7 rounded-3xl">
+        <div class="circle flex flex-col bg-lightBlue-150 dark:bg-darkBlue-200 p-7 rounded-3xl backdrop-blur-xl">
             <div class="h-32"></div>
            <div>
                <div class="flex items-center gap-x-4 mb-4">
-                   <div class="toggleTheme flex items-center justify-center w-12 h-6 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl cursor-pointer">
+                   <div class="toggleTheme flex items-center justify-center w-12 h-6 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl cursor-pointer shadow-btnShadow hover:shadow-none">
                         <svg class="hidden dark:block w-4 h-4 text-lightBlue-200 dark:text-darkBlue-250">
                             <use href="#sun"></use>
                         </svg>
@@ -38,67 +38,67 @@
                            <use href="#moon"></use>
                        </svg>
                    </div>
-                   <div class="flex items-center justify-center w-12 h-6 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl"></div>
-                   <div class="flex items-center justify-center w-12 h-6 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl"></div>
-                   <div class="flex items-center justify-center w-12 h-6 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl"></div>
+                   <div class="flex items-center justify-center w-12 h-6 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl shadow-btnShadow"></div>
+                   <div class="flex items-center justify-center w-12 h-6 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl shadow-btnShadow"></div>
+                   <div class="flex items-center justify-center w-12 h-6 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl shadow-btnShadow"></div>
                </div>
                <div class="grid gap-4 grid-cols-4 grid-rows-5">
-                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl shadow-btnShadow">
                        <span class="text-lightBlue-350 dark:text-darkBlue-400">AC</span>
                    </div>
-                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl shadow-btnShadow">
                        <span class="text-lightBlue-350 dark:text-darkBlue-400">
                            <svg class="w-6 h-6">
                                <use href="#backspace"></use>
                            </svg>
                        </span>
                    </div>
-                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl shadow-btnShadow">
                        <span class="text-lightBlue-350 dark:text-darkBlue-400">/</span>
                    </div>
-                   <div class="flex items-center justify-center w-12 h-12  bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                   <div class="flex items-center justify-center w-12 h-12  bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl shadow-btnShadow">
                        <span class="text-lightBlue-350 dark:text-darkBlue-400 h-6">*</span>
                    </div>
-                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl shadow-btnShadow">
                        <span class="text-lightBlue-200 dark:text-darkBlue-250">7</span>
                    </div>
-                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl shadow-btnShadow">
                        <span class="text-lightBlue-200 dark:text-darkBlue-250">8</span>
                    </div>
-                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl shadow-btnShadow">
                        <span class="text-lightBlue-200 dark:text-darkBlue-250">9</span>
                    </div>
-                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl shadow-btnShadow">
                        <span class="text-lightBlue-350 dark:text-darkBlue-400">-</span>
                    </div>
-                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl shadow-btnShadow">
                        <span class="text-lightBlue-200 dark:text-darkBlue-250">4</span>
                    </div>
-                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl shadow-btnShadow">
                        <span class="text-lightBlue-200 dark:text-darkBlue-250">5</span>
                    </div>
-                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl shadow-btnShadow">
                        <span class="text-lightBlue-200 dark:text-darkBlue-250">6</span>
                    </div>
-                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl">
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl shadow-btnShadow">
                        <span class="text-lightBlue-350 dark:text-darkBlue-400">+</span>
                    </div>
-                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl shadow-btnShadow">
                        <span class="text-lightBlue-200 dark:text-darkBlue-250">1</span>
                    </div>
-                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl shadow-btnShadow">
                        <span class="text-lightBlue-200 dark:text-darkBlue-250">2</span>
                    </div>
-                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl shadow-btnShadow">
                        <span class="text-lightBlue-200 dark:text-darkBlue-250">3</span>
                    </div>
-                   <div class="flex items-center justify-center col-span-2 w-full h-full bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                   <div class="flex items-center justify-center col-span-2 w-full h-full bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl shadow-btnShadow">
                        <span class="text-lightBlue-200 dark:text-darkBlue-250">0</span>
                    </div>
-                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl">
+                   <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl shadow-btnShadow">
                        <span class="text-lightBlue-200 dark:text-darkBlue-250 h-10">.</span>
                    </div>
-                   <div class="flex items-center justify-center col-start-4 row-start-4 row-span-2 w-12 bg-lightBlue-400 dark:bg-darkBlue-450 rounded-xl">
+                   <div class="flex items-center justify-center col-start-4 row-start-4 row-span-2 w-12 bg-lightBlue-400 dark:bg-darkBlue-450 rounded-xl shadow-equalShadow">
                        <span class="text-lightBlue-450 dark:text-darkBlue-500">=</span>
                    </div>
                </div>
