add Result & Typeing classes

--- a/Public/index.html
+++ b/Public/index.html
@@ -31,8 +31,9 @@
            <div class="absolute bg-circle-200 dark:bg-circleDark-200 w-60 h-60 rounded-full bottom-[-18px] right-[-12px] -z-10"></div>
            <div class="flex flex-col p-7 rounded-3xl backdrop-blur-3xl">
            <!--  ***  Result  ***  -->
-               <div class="h-32 mb-4">
-                   <div id="typeIng" class="bg-transparent text-gray-150 h-full w-60 transition-all overflow-hidden">4244121459632115582214455233665224</div>
+               <div class="h-32 mb-4 max-w-60">
+                   <div id="typeIng" class="text-end break-all text-lightBlue-750 dark:text-gray-150 h-60 pr-12 w-[calc(100%+3rem)] overflow-y-scroll ">1234567444441111111111111215322145789666552222333221144552211444444444444222222222489</div>
+                   <div id="result" class="text-end h-16 pr-12 w-[calc(100%+3rem)] break-all text-3xl text-lightBlue-550 dark:text-darkBlue-100 overflow-y-scroll"></div>
                </div>
            <!--  ***  Signs  ***  -->
                <div>
@@ -50,7 +51,7 @@
                        <div class="flex items-center justify-center w-12 h-6 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer"></div>
                    </div>
                    <div class="grid gap-4 grid-cols-4 grid-rows-5">
-                       <div class="flex items-center justify-center w-12 h-12 text-lightBlue-350 dark:text-darkBlue-400 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl hover:bg-lightBlue-650 dark:hover:bg-darkBlue-600 cursor-pointer">AC</div>
+                       <div class="flex items-center justify-center w-12 h-12 text-lightBlue-350 dark:text-darkBlue-400 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl hover:bg-lightBlue-650 dark:hover:bg-darkBlue-600 cursor-pointer">C</div>
                        <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl hover:bg-lightBlue-650 dark:hover:bg-darkBlue-600 cursor-pointer">
                        <span class="text-lightBlue-350 dark:text-darkBlue-400">
                            <svg class="w-6 h-6">
