set onClick Event On Clear document

--- a/Public/index.html
+++ b/Public/index.html
@@ -51,9 +51,9 @@
                        <div class="flex items-center justify-center w-12 h-6 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer"></div>
                    </div>
                    <div class="grid gap-4 grid-cols-4 grid-rows-5">
-                       <div class="flex items-center justify-center w-12 h-12 text-lightBlue-350 dark:text-darkBlue-400 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl hover:bg-lightBlue-650 dark:hover:bg-darkBlue-600 cursor-pointer">C</div>
+                       <div id="clear" class="flex items-center justify-center w-12 h-12 text-lightBlue-350 dark:text-darkBlue-400 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl hover:bg-lightBlue-650 dark:hover:bg-darkBlue-600 cursor-pointer">C</div>
                        <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl hover:bg-lightBlue-650 dark:hover:bg-darkBlue-600 cursor-pointer">
-                       <span class="text-lightBlue-350 dark:text-darkBlue-400">
+                       <span id="back-space" class="text-lightBlue-350 dark:text-darkBlue-400">
                            <svg class="w-6 h-6">
                                <use href="#backspace"></use>
                            </svg>
