change div to input

--- a/Public/index.html
+++ b/Public/index.html
@@ -32,8 +32,8 @@
            <div class="flex flex-col p-7 rounded-3xl backdrop-blur-3xl">
            <!--  ***  Result  ***  -->
                <div class="h-32 mb-4 max-w-60">
-                   <div id="typeIng" class="break-all text-lightBlue-750 dark:text-gray-150 h-16 pr-12 w-[calc(100%+3rem)] overflow-y-scroll"></div>
-                   <div id="result" class="h-16 pr-12 w-[calc(100%+3rem)] break-all text-3xl text-lightBlue-550 dark:text-darkBlue-100 overflow-y-scroll"></div>
+                   <input id="typeIng" class="border-none outline-none bg-transparent break-all text-lightBlue-750 dark:text-gray-150 h-16 pr-12 w-[calc(100%+3rem)] overflow-y-scroll"></input>
+                   <input id="result" class="border-none outline-none bg-transparent h-16 pr-12 w-[calc(100%+3rem)] break-all text-3xl text-lightBlue-550 dark:text-darkBlue-100 overflow-y-scroll"></input>
                </div>
            <!--  ***  Signs  ***  -->
                <div>
@@ -52,8 +52,8 @@
                    </div>
                    <div class="grid gap-4 grid-cols-4 grid-rows-5">
                        <div id="clear" class="flex items-center justify-center w-12 h-12 text-lightBlue-350 dark:text-darkBlue-400 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl hover:bg-lightBlue-650 dark:hover:bg-darkBlue-600 cursor-pointer">C</div>
-                       <div class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl hover:bg-lightBlue-650 dark:hover:bg-darkBlue-600 cursor-pointer">
-                       <span id="back-space" class="text-lightBlue-350 dark:text-darkBlue-400">
+                       <div id="back-space" class="flex items-center justify-center w-12 h-12 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl hover:bg-lightBlue-650 dark:hover:bg-darkBlue-600 cursor-pointer">
+                       <span class="text-lightBlue-350 dark:text-darkBlue-400">
                            <svg class="w-6 h-6">
                                <use href="#backspace"></use>
                            </svg>
