--- a/Public/index.html
+++ b/Public/index.html
@@ -32,11 +32,11 @@
            <!--  ***  Circles  ***  -->
            <div class="absolute bg-circle-100 dark:bg-circleDark-100 w-60 h-60 rounded-full top-[-18px] left-[-12px] -z-10"></div>
            <div class="absolute bg-circle-200 dark:bg-circleDark-200 w-60 h-60 rounded-full bottom-[-18px] right-[-12px] -z-10"></div>
-           <div class="flex flex-col p-7 rounded-3xl backdrop-blur-3xl">
+           <div class="flex flex-col p-4 md:p-7 rounded-3xl backdrop-blur-3xl">
            <!--  ***  Result  ***  -->
                <div class="h-32 mb-4 max-w-60">
                    <div id="typeIng" class="bg-transparent break-all text-lightBlue-750 dark:text-gray-150 h-16 pr-12 w-[calc(100%+3rem)] overflow-y-scroll"></div>
-                   <div id="result" class="bg-transparent h-16 pr-12 w-[calc(100%+3rem)] break-all text-3xl text-lightBlue-550 dark:text-darkBlue-100 overflow-y-scroll"></div>
+                   <div id="result" class="bg-transparent h-16 pr-12 w-[calc(100%+3rem)] break-all text-2xl text-lightBlue-550 dark:text-darkBlue-100 overflow-y-scroll"></div>
                </div>
            <!--  ***  Signs  ***  -->
                <div>
